fixed spacing and dividers

--- a/app/assets/stylesheets/components/_day.scss
+++ b/app/assets/stylesheets/components/_day.scss
@@ -17,8 +17,8 @@
 }
 
 .day-arrows {
-  width: 15px;
-  height: 15px;
+  width: 25px;
+  height: 25px;
   margin-bottom: 3px;
 }
 
