--- a/app/assets/stylesheets/components/_form_agenda.scss
+++ b/app/assets/stylesheets/components/_form_agenda.scss
@@ -61,3 +61,9 @@ textarea#daily_symptom_notes {
   height: 21px;
   width:21px;
 }
+
+@include media-breakpoint-up(lg) {
+  .column-border-left {
+    border-left: 1px solid #e9ecef;
+  }
+}
